--- a/CSS3/index.html
+++ b/CSS3/index.html
@@ -3,9 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>CSS3</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="./gradient.css">
   </head>
-  <body>
 
+  <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">CSS3 gradients</a></li>
+        <li><a href="transitionAndTransform.html">CSS3 Transition and transform</a></li>
+      </ul>
+    </nav>
+      <p class="linear">linear gradient</p>
+      <p class="color-stops">Color Stops</p>
+      <p class="color-stops-positions">Color stop positions can be specified for each color.</p>
+      <div class="first">Left to right</div>
+      <div class="second">Bottom to top</div>
+      <div class="third">Bottom left</div>
+      <div class="fourth">100deg</div>
+      <div class="fifth">The repeating-linear-gradient() function
+        is used to repeat a linear gradient
+      </div>
+      <div class="seventh">radial gradient</div>
+      <div class="eighth">gradient default shape </div>
+      <div class="ninth">circle</div>
+      <div class="tenth">top left</div>
+      <div class="eleventh">percentage</div>
+      <div class="twelth">Color gradient setting <span>Hover<span></div>
   </body>
 </html>
